--- a/adv/advanced.html
+++ b/adv/advanced.html
@@ -28,7 +28,7 @@
                 <!-- Dice result will be displayed here -->
             </div>
             
-            <a href="answer-keys-promise-cards.html" target="_blank"><button id="answer-keys-promise-cards">Answer Keys [Promise Cards]</button></a>
+            <a href="answer-keys-promise-cards.html" target="_blank"><button id="answer-keys-promise-cards">Answer Keys [Purple Cards]</button></a>
     </div>
 
     <!-- Modal to display the randomly picked image -->
